# http-server

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CorsConfig.h  HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h  LICENSE  Logging.h  Middleware.h  README.md  RequestContext.h  RequestHandler.h  RestAdapter.cpp  RestAdapter.h  RestRouter.cpp  RestRouter.h  RestTypes.cpp  RestTypes.h  ServerConfig.h  WorkPool.h
.github/workflows/: ci.yml
cmake/: HttpServerConfig.cmake.in
docs/: CONSUMING.md
examples/minimal_server/: main.cpp
tests/: CMakeLists.txt  admission_control_tests.cpp  async_and_middleware_tests.cpp  http_client.hpp  integration_tests.cpp  rest_router_tests.cpp  test_server.hpp
